[package]
name = "https-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
clap = { version = "3.0.14", features = ["derive"] }
env_logger = "0.9.0"
futures = "0.3.19"
hyper = { version = "0.14.16", features = ["full"] }
log = "0.4.14"
rustls = "0.20.2"
rustls-pemfile = "0.2.1"
tokio = { version = "1.16.1", features = ["full"] }
tokio-rustls = "0.23.2"
